<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/wrapper_result"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_icon_app"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_instagram"
        android:contentDescription="@string/platform"
        android:layout_marginEnd="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Headline -->
        <TextView
            android:id="@+id/tv_title"
            style="@style/paragraphRegular.bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_sentiment_id"
            style="@style/paragraphRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_sentiment"/>
    </LinearLayout>
</LinearLayout>
