<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- Gambar Profil -->
    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_user_default"
        android:contentDescription="@string/image_profile" />

    <!-- Kontainer untuk Username dan Komentar -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Username -->
        <TextView
            android:id="@+id/tv_username"
            style="@style/paragraphRegular.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <!-- Komentar -->
        <TextView
            android:id="@+id/tv_comment"
            style="@style/paragraphRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment" />
    </LinearLayout>
</LinearLayout>
