<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.SignInActivity"
    android:background="@drawable/background_gradient">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminate="true"/>
            <TextView
                android:id="@+id/tv_sign_in"
                style="@style/heading3"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"/>
            <TextView
                android:id="@+id/tv_sub_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/paragraphRegular"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/sub_header"/>
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                style="@style/paragraphRegular.bold"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:boxCornerRadiusBottomEnd="14dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusTopStart="14dp">
            <com.example.perceivo.ui.custome.EmailEditText
                android:id="@+id/ed_signin_email"
                style="@style/EditTextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                style="@style/paragraphRegular.bold"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:boxCornerRadiusBottomEnd="14dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusTopStart="14dp">
                <com.example.perceivo.ui.custome.PasswordEditText
                    android:id="@+id/ed_signin_password"
                    style="@style/EditTextPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:ignore="SpeakableTextPresentCheck"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                style="@style/ButtonPrimary"
                android:layout_marginTop="32dp"
                android:text="@string/sign_in"
                />

            <TextView
                android:id="@+id/tv_or"
                style="@style/paragraphRegular.bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_google"
                style="@style/ButtonGoogle"
                android:layout_marginTop="16dp"
                android:text="@string/continue_with_google"
                app:icon="@drawable/ic_google"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/paragraphRegular.bold"
                android:text="@string/forgot_pw"
                android:gravity="center"
                android:textColor="@color/primary_100"
                android:layout_marginTop="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_have_account"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="14sp"
                    android:textColor="@color/primary_100"
                    android:textStyle="bold"
                    android:layout_marginStart="4dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>