<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_20">

    <!--mencoba git-->
    <!-- Toolbar -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/neutral_00"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@color/neutral_00"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/heading3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/analytics_title" />
    </LinearLayout>

    <LinearLayout
        style="@style/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/paragraphRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analytics_title"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/paragraphRegular.bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analytics_title"
            android:layout_marginBottom="8dp"/>

        <EditText
            style="@style/EditTextPrimary"
            android:background="@drawable/rounded_field"
            android:hint="@string/link_hint"
            android:inputType="text" />

        <TextView
            style="@style/paragraphRegular.bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analytics_title"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>

        <EditText
            style="@style/EditTextPrimary"
            android:background="@drawable/rounded_field"
            android:hint="@string/link_hint"
            android:inputType="text" />

        <Button
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analyze_button"/>
    </LinearLayout>

    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
